Fix wrong unified weight paint value version patch, was doing incorrect version check. Fix #31209: weight paint sample & fill not using correct brush/unified value.